fix animation on mobile and desktop

--- a/src/components/navigation-bar/navigation-bar.less
+++ b/src/components/navigation-bar/navigation-bar.less
@@ -1,7 +1,7 @@
 @import (once) "../../styles/variables.less";
 
 .page-logo {
-  margin: 20px;
+  margin: @spacing-m;
   height: auto;
   position: fixed;
   z-index: 1;
@@ -17,42 +17,77 @@
 }
 
 .nav {
-  width: 100%;
-  height: 100%;
+  width: @nav-bar-height;
+  height: @nav-bar-height;
+  position: fixed;
+
   display: flex;
+  background: black;
+  max-width: @page-max-width;
+
+  @media(min-width: @breakpoint-675){
+    margin-left:auto;
+    margin-right: auto;
+    width: 100%;
+    height: @nav-bar-height;
+  }
+}
+.nav--fullscreen {
+  @media(max-width: @breakpoint-675) {
+    width: 100vw;
+    height: 100vh;
+  }
 }
 
-.nav-close svg {
-  display: block;
-  width: 55px;
-  height: 100%;
-  padding: @spacing-m;
-  fill: @white;
-  opacity: 1;
+.nav-hamburger.hidden,
+.nav-close.hidden {
+  display: none;
+}
+
+.nav-close {
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: @nav-bar-height;
+  height: @nav-bar-height;
+}
+
+.nav-hamburger {
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: @nav-bar-height;
+  height: @nav-bar-height;
 }
 
 .nav-hamburger svg {
-  display: block;
-  width: 65px;
-  height: 100%;
+  width: @nav-bar-height;
+  height: @nav-bar-height;
   padding: @spacing-m;
   fill: @white;
   opacity: 1;
-
-  @media(min-width: @breakpoint-675) {
-    opacity: 0;
+  @media(min-width: @breakpoint-1024){
     display: none;
   }
 }
 
+.nav-close svg {
+  width: @nav-bar-height;
+  height: @nav-bar-height;
+  padding: @spacing-m;
+  fill: @white;
+  opacity: 1;
+}
+
 .nav-container {
-  height: 65px;
+  height: @nav-bar-height;
   position: fixed;
   max-width: @page-max-width;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  background: black;
 }
 
 .nav__list {
@@ -61,49 +96,39 @@
   align-items: center;
   list-style: none;
   padding-left: 0;
+  padding-right: 35px;
   margin: 0;
   width: 100%;
+  height: @nav-bar-height;
   justify-content: flex-end;
 }
 
 .nav__list--column {
   flex-direction: column;
   justify-content: space-evenly;
+  height: 100vh;
 
   @media(min-width: @breakpoint-675) {
+    height: @nav-bar-height;
     flex-direction: row;
+    justify-content: flex-end;
   }
 }
-
-// .nav__list-item:first-child {
-//   margin-right: auto;
-//   margin-left: @spacing-m;
-//   display: flex;
-// }
-
-// .nav__list-item:first-child >
-// .nav__list-link >
-// .nav__list-text {
-//   font-size: @font-size-l;
-//   line-height: 0.75rem;
-// }
 
 .nav__list-item.nav__list-item--no-margin {
   margin-left: 0;
   margin-right: 0;
 }
 
-.nav__list-item:not(:first-child) {
+.nav__list-item {
   display:none;
+  width: auto;
+  margin: 0 @spacing-s;
+  padding-right: 15px;
 
   @media(min-width: @breakpoint-675) {
     display: flex;
   }
-}
-
-.nav__list-item {
-  width: auto;
-  margin: 0 @spacing-s;
 }
 
 .nav__list-link {
@@ -115,6 +140,7 @@
   }
   @media(min-width: @breakpoint-1024) {
     padding: @spacing-m;
+    margin-right: @spacing-m;
   }
 }
 
