--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -29,3 +29,7 @@ main {
   list-style: none;
   padding: 0;
 }
+
+.hidden {
+  display: none;
+}
