--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -19,3 +19,5 @@
 @font-weight-bold: 600;
 
 @white: #ffffff;
+
+@nav-bar-height: 65px;
